--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="/resources/style.css">
   </head>
   <body>
     <h1>Discover hidden places in the world around you</h1>
@@ -11,5 +11,15 @@
     <video autoplay="" muted="" loop="">
       <source src="resources/videos/excursion.mp4" type="video/mp4">
     </video>
+    <h2>Your personal travel guide</h2>
+    <p>Excursion remembers places you like, and recommends new points of interest around you.</p>
+    <p><img src="resources/images/camp.jpg" alt=""></p>
+    <p><img class="app" src="resources/images/phone.png"></p>
+    <h2>Coming Soon for iPhone and Android</h2>
+    <p><a class="cta" href="#">Download Excursion (Coming soon!)</a></p>
+    <div class="footer">
+      <p>© Excursion</p>
+    </div>
   </body>
 </html>
+
