--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <link rel="stylesheet" href="excursion/resources/style.css">
+    <link rel="stylesheet" href="resources/style.css">
   </head>
   <body>
     <h1>Discover hidden places in the world around you</h1>
@@ -22,5 +22,6 @@
     </div>
   </body>
 </html>
+
 
 
