--- a/index.html
+++ b/index.html
@@ -9,12 +9,12 @@
       <a class="cta" href="#">Download Excursion (Coming soon!)</a>
     </p>
     <video autoplay="" muted="" loop="">
-      <source src="excursion/resources/videos/excursion.mp4" type="video/mp4">
+      <source src="resources/videos/excursion.mp4" type="video/mp4">
     </video>
     <h2>Your personal travel guide</h2>
     <p>Excursion remembers places you like, and recommends new points of interest around you.</p>
-    <p><img src="excursion/resources/images/camp.jpg" alt=""></p>
-    <p><img class="app" src="excursion/resources/images/phone.png"></p>
+    <p><img src="resources/images/camp.jpg" alt=""></p>
+    <p><img class="app" src="resources/images/phone.png"></p>
     <h2>Coming Soon for iPhone and Android</h2>
     <p><a class="cta" href="#">Download Excursion (Coming soon!)</a></p>
     <div class="footer">
@@ -22,6 +22,7 @@
     </div>
   </body>
 </html>
+
 
 
 
