--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     </video>
     <h2>Your personal travel guide</h2>
     <p>Excursion remembers places you like, and recommends new points of interest around you.</p>
-    <p><img src="resources/images/camp.jpg" alt=""></p>
+    <p><img src="resources/images/camp.jpeg" alt=""></p>
     <p><img class="app" src="resources/images/phone.png"></p>
     <h2>Coming Soon for iPhone and Android</h2>
     <p><a class="cta" href="#">Download Excursion (Coming soon!)</a></p>
@@ -22,6 +22,7 @@
     </div>
   </body>
 </html>
+
 
 
 
