--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <p>
       <a class="cta" href="#">Download Excursion (Coming soon!)</a>
     </p>
-    <video autoplay="" muted="" loop="">
+    <video autoplay loop>
       <source src="resources/videos/excursion.mp4" type="video/mp4">
     </video>
     <h2>Your personal travel guide</h2>
@@ -22,6 +22,7 @@
     </div>
   </body>
 </html>
+
 
 
 
